upload ok product -> resource